Card Maker Version History
--------------------------
1.5.0.0
- Fix {appfolder} translation (this is used by templates mostly)

1.4.0.0
- Overhaul UI for adding/pasting/duplicating elements to allow for specifying basic positioning.
- Added functionality to measure the width of a string based on the font specified (strw)
- Added ini setting that tracks the color picker values across app executions.
- Added option to toggle translation cache (string) on element translation (x/y move) (99% of use cases do not need this enabled)
- Added ability to create/duplicate elements into a specific position relative to the original(s). Will likely expand on this.
- Added gradient element settings dialog (kind of hidden under a ">" button)
- [Experimental] Added option to allow for the merging of alike text markups (allows for underlines/strike to work across words/spaces) - Can be enabled in the app settings.
- Changed FormattedText Auto-Scale functionality
- Added alternative approach to measure strings for FormattedText (Old/Default: CharacterRanges vs. New:MeasureStringGenericTypoGraphic)
- Added in-memory caching when exporting sublayouts
- Added cnv (color normalized value) macro for converting colors to normalized values
- Added ability to specify graphic elements as masks
- Added ability to toggle graphic settings
- Added ability to specify color matrix
- Added tracking of tree node collapse state to each project.
- Added ability to control the card count via define values (and only define values)
- Added ![exporting] ![exportformat] ![parentlayout] ![rootlayout] card values (see manual)
- Fixed ![deckindex] and ![cardindex] (they were swapped)
- Fixed rare/intermittent issue with reference reads
- Added preliminary SubLayout element functionality [needs even more documentation]
- Adjusted Image Cache to track last updated times on files
- Added WebP image support (import/export & Windows only) via SkiaSharp (https://github.com/mono/SkiaSharp)