@@ -122,6 +122,8 @@
     <Compile Include="Card\FormattedText\Markup\AlignCenterMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\AlignLeftMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\AlignRightMarkup.cs" />
+    <Compile Include="Card\FormattedText\Markup\TitleCaseMarkup.cs" />
+    <Compile Include="Card\FormattedText\Markup\NoCapsMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\BaseAlignMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\AllCapsMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\ColorMatrixMarkup.cs" />
@@ -139,6 +141,7 @@
     <Compile Include="Card\FormattedText\Markup\MirrorMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\PixelMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\MarginLeftMarkup.cs" />
+    <Compile Include="Card\FormattedText\Util\StringUtil.cs" />
     <Compile Include="Card\IDrawFormattedText.cs" />
     <Compile Include="Card\IDrawGraphic.cs" />
     <Compile Include="Card\IDrawText.cs" />
