@@ -2,6 +2,7 @@ Card Maker Version History
 --------------------------
 1.5.0.0
 - Fix {appfolder} translation (this is used by templates mostly)
+- Added nocaps and titlecase FormattedText tags
 
 1.4.0.0
 - Overhaul UI for adding/pasting/duplicating elements to allow for specifying basic positioning.
